--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "dompurify": "^2.4.0",
+    "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
